app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-project
  labels:
    environment: production
