app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: test
  name: test
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: test
    weight: 100
